[Fixed] Bugs and site optimization

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="E">
+<html lang="En">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +36,7 @@
             <img src="https://image.flaticon.com/icons/svg/197/197580.svg" alt="Venezuela's flag"/>
             <span>by Jonathan Araujo</span>
           </div>
-      </footer>
+        </footer>
     </section>
     <!-- Seccion Two -->
     <section>
@@ -55,7 +55,7 @@
         </div>
         <div>
           <button type="submit">SIGN UP NOW</button>
-          <button class="button-member">I am already member</button>
+          <button type="button" class="button-member">I am already member</button>
         </div>
       </form>
     </section>
